[gd_scene load_steps=8 format=3 uid="uid://jaagmtgsu1aj"]

[ext_resource type="Script" path="res://Upgrades/upgrade_card.gd" id="1_5vnh2"]
[ext_resource type="FontFile" uid="uid://dyey30lwflix3" path="res://Fonts/Marker Felt.ttf" id="1_35nt1"]

[sub_resource type="Animation" id="Animation_p0ms1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_btaic"]
resource_name = "choose"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1.5, 1.5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_choose"
}, {
"args": [],
"method": &"next_level"
}]
}

[sub_resource type="Animation" id="Animation_18cms"]
resource_name = "hover"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_hover"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, 0.0]
}

[sub_resource type="Animation" id="Animation_t156c"]
resource_name = "release"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cxlb4"]
_data = {
"RESET": SubResource("Animation_p0ms1"),
"choose": SubResource("Animation_btaic"),
"hover": SubResource("Animation_18cms"),
"release": SubResource("Animation_t156c")
}

[node name="UpgradeCardTemplate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1520.0
offset_bottom = -580.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 250)
mouse_filter = 1
script = ExtResource("1_5vnh2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.345373, 0.39217, 0.84168, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="NameContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/NameContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/NameContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
mouse_filter = 2
color = Color(0.6655, 0.71805, 0.961175, 1)

[node name="LblName" type="Label" parent="MarginContainer/HBoxContainer/NameContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_35nt1")
theme_override_font_sizes/font_size = 48
text = "Sample Upgrade"
horizontal_alignment = 1

[node name="DescriptionContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/NameContainer"]
custom_minimum_size = Vector2(280, 400)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/NameContainer/DescriptionContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0.6655, 0.71805, 0.961175, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/NameContainer/DescriptionContainer/ColorRect"]
layout_mode = 0
offset_right = 361.0
offset_bottom = 381.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/NameContainer/DescriptionContainer/ColorRect/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LblDescription" type="Label" parent="MarginContainer/HBoxContainer/NameContainer/DescriptionContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit"
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cxlb4")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
